[metadata]
name = swarmnet
version = 0.0.7
author = Toby Godfrey
author_email = swarmnet@tgodfrey.com
description = A gossip-based swarm communication library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tgodfrey0/SwarmNet
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
